Refresh foundation pages
Update with 2016-2018 strategy pages, align design with /about page

Bugillza bug 1307107

--- a/bedrock/foundation/templates/foundation/documents/index.html
+++ b/bedrock/foundation/templates/foundation/documents/index.html
@@ -9,7 +9,7 @@
 {% set body_id = "documents" %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ self.page_title() }}</h1>
+  {{ self.page_title() }}
 {% endblock %}
 
 {% block article %}
