--- a/bedrock/foundation/templates/foundation/about.html
+++ b/bedrock/foundation/templates/foundation/about.html
@@ -9,7 +9,7 @@
 {% set body_id = "about" %}
 
 {% block article_title %}
-  <h1 class="page-title">{{ _('About the Mozilla Foundation') }}</h1>
+  {{ _('About the Mozilla Foundation') }}
 {% endblock %}
 
 {% block article %}
