--- a/bedrock/foundation/templates/foundation/index.html
+++ b/bedrock/foundation/templates/foundation/index.html
@@ -8,129 +8,98 @@
 
 {% set body_id = "index" %}
 
-{% block article_title %}
-<h1 class="page-title">{{ _('The Mozilla Foundation') }}</h1>
+{% block article_header %}
+  <p>
+    {% trans url_manifesto=url('mozorg.about.manifesto') %}
+      The nonprofit Mozilla Foundation believes the Internet must always remain a global public resource that is open and accessible to all. Our work is guided by the <a href="{{ url_manifesto }}">Mozilla Manifesto</a>.
+    {% endtrans %}
+  </p>
 {% endblock %}
 
 {% block article %}
-  <h2>{{ _('We Are Mozilla') }}</h2>
   <p>
-  {% trans url_manifesto=url('mozorg.about.manifesto') %}
-    The nonprofit Mozilla Foundation believes the internet must always remain a global public resource that is open and accessible to all. Our work is guided by the <a href="{{ url_manifesto }}">Mozilla Manifesto</a>.
+  {% trans %}
+    The direct work of the Mozilla Foundation focuses on fueling the movement for an open Internet. We do this by connecting open Internet leaders with each other and by mobilizing grassroots activists around the world.
   {% endtrans %}
   </p>
 
   <p>
   {% trans %}
-    The direct work of the Mozilla Foundation focuses on making the health of the internet a mainstream issue. We do this by connecting open internet leaders with each other and by mobilizing grassroots activities around the world.
+    The Foundation is also the sole shareholder in the Mozilla Corporation, the maker of Firefox and other open source tools. Mozilla Corporation functions as a self-sustaining social enterprise – money earned through its products is reinvested into the organization.
+  {% endtrans %}
+  </p>
+
+  <p>
+    <a href="https://mzl.la/foundation-strategy" class="read-strategy">{{ _('Read the Mozilla Foundation’s 2016-2018 Strategy') }}</a>
+  </p>
+
+  <h3>{{ _('Foundation Programs') }}</h3>
+  <p>
+  {% trans %}
+    Working with people and communities all across Mozilla, the Foundation team is focused on fueling the open Internet movement. Our programs are focused in three areas:
+  {% endtrans %}
+  </p>
+
+  <div class="programs">
+    <div class="program-column">
+    <h4><a href="{{url('foundation.issues')}}">{{ _('Shape the agenda') }}</a></h4>
+
+    <p>
+    {% trans %}
+      Mozilla has identified five key issues that are critical to build the open Internet we want:
+    {% endtrans %}
+    </p>
+
+    <ul>
+      <li>{{ _('Privacy and Security') }}</li>
+      <li>{{ _('Open Innovation') }}</li>
+      <li>{{ _('Decentralization') }}</li>
+      <li>{{ _('Web Literacy') }}</li>
+      <li>{{ _('Digital Inclusion') }}</li>
+    </ul>
+    </div>
+
+    <div class="program-column">
+      <h4><a href={{url('foundation.leadership-network')}}>{{ _('Connect leaders') }}</a></h4>
+      <p>
+      {% trans %}
+        Our nascent Mozilla Leadership Network finds, connects and provides learning opportunities for a new generation of leaders who will ensure the next wave of access, inclusion and opportunity online.
+      {% endtrans %}
+      </p>
+    </div>
+
+    <div class="program-column">
+      <h4><a href={{url('foundation.advocacy')}}>{{ _('Rally citizens') }}</a></h4>
+      <p>
+      {% trans %}
+        Mozilla works with allies to cultivate a global force of tens of millions of people prepared to support the rights of citizens of the web.
+      {% endtrans %}
+      </p>
+    </div>
+  </div>
+
+  <h3>{{ _('Products and Technology') }}</h3>
+
+  <p>
+  {% trans %}
+    Mozilla Corporation, a wholly owned subsidiary of the Foundation, makes consumer Internet products that advance the same values outlined in the Mozilla Manifesto.
   {% endtrans %}
   </p>
 
   <p>
   {% trans %}
-      The Foundation is also the sole shareholder in the Mozilla Corporation, the maker of Firefox and other open source tools. Mozilla Corporation functions as a self-sustaining social enterprise – money earned through its products is reinvested into the organization.
+    Firefox, our flagship product, gives increased choice, privacy and security to 100s of millions of people around the world. Product exploration initiatives like our ‘connected devices’ program aim to bring more mainstream products with Mozilla values into the world. Technology initiatives like Rust and Mozilla’s online game centre aim to spread new thinking about open technology across the whole of the Internet industry.
   {% endtrans %}
   </p>
 
-  <p>
-    <strong><a href="https://mzl.la/foundation-strategy" class="go">{{ _('Read the Mozilla Foundation’s 2016-2018 Strategy') }}</a></strong>
-  </p>
-
-  <h2>{{ _('Foundation Programs') }}</h2>
-  <p>
-  {% trans %}
-      Working with people and communities all across Mozilla, the Foundation team is focused on fueling the open internet movement. Our programs are focused in three areas:
-  {% endtrans %}
-  </p>
-
-  <h3>{{ _('1. Shape the agenda.') }}</h3>
-  <p>
-  {% trans %}
-    To unlock the next wave of openness and opportunity on the internet, we need citizens of the web to understand and be ready to address the biggest challenges that face the internet today.
-  {% endtrans %}
-  </p>
-
-  <p>
-  {% trans %}
-    Mozilla has identified five key issues that are critical at this moment in time:
-  {% endtrans %}
-  </p>
-
-  <ul>
-    <li>{{ _('Privacy and Security') }}</li>
-    <li>{{ _('Open Innovation') }}</li>
-    <li>{{ _('Decentralization') }}</li>
-    <li>{{ _('Web Literacy') }}</li>
-    <li>{{ _('Digital Inclusion') }}</li>
-  </ul>
-
-  <p>
-  {% trans url_open_internet_video='https://www.youtube.com/watch?v=WnMmq2vKDYs' %}
-    Example: <a href="{{ url_open_internet_video }}" class="go">Listen to Mozilla Foundation Executive Director Mark Surman discuss the need for a renaissance in the open internet movement</a>
-  {% endtrans %}
-  </p>
-
-  <h3>{{ _('2. Connect leaders.') }}</h3>
-  <p>
-  {% trans %}
-    As the internet becomes more embedded in our daily lives, we need a generation of leaders who will build the values of the open internet into all aspects of human society. Our nascent Mozilla Leadership Network finds, connects and provides learning opportunities for leaders like these. It includes a diverse collection of leaders in fields like science, public policy, education and technology.
-  {% endtrans %}
-  </p>
-
-  <p>
-  {% trans url_mozilla_science='https://science.mozilla.org/' %}
-    Example: <a href="{{ url_mozilla_science }}" class="go">Learn about Mozilla Science, a community of researchers, developers and librarians making scientific research open and accessible</a>
-  {% endtrans %}
-  </p>
-
-  <h3>{{ _('3. Rally citizens.') }}</h3>
-  <p>
-  {% trans %}
-    Mozilla works with allies to cultivate a global force of tens of millions of people prepared to support the rights of citizens of the web. From advocacy campaigns to grassroots mobilizing, we’re raising awareness and building a community of activists around the world. If we’re successful, internet users will have the knowledge they need to make better choices online everyday. And, in turn, governments and companies will react with better laws and better products.
-  {% endtrans %}
-  </p>
-
-  <p>
-  {% trans url_mozilla_advocacy='https://advocacy.mozilla.org/encrypt/' %}
-    Example: <a href="{{ url_mozilla_advocacy }}" class="go">Explore Mozilla’s public education encryption campaign, which engaged millions of everyday internet users</a>
-  {% endtrans %}
-  </p>
-
-
-  <p class="note">
-  {% trans url_2020_plan='https://wiki.mozilla.org/MoFo_2020' %}
-    <em>For a copy of the Mozilla Foundation's 2020 strategic program plan, <a href="{{ url_2020_plan }}">please click here</a>.</em>
-  {% endtrans %}
-  </p>
-
-  <h2>{{ _('Products and Technology') }}</h2>
-
-  <p>
-  {% trans %}
-    Mozilla Corporation, a wholly owned subsidiary of the Foundation, makes consumer internet products that advance the same values outlined in the Mozilla Manifesto.
-  {% endtrans %}
-  </p>
-
-  <p>
-  {% trans %}
-    Firefox, our flagship product, gives increased choice, privacy and security to 100s of millions of people around the world. Product exploration initiatives like our ‘connected devices’ program aim to bring more mainstream products with Mozilla values into the world.
-  {% endtrans %}
-  </p>
-
-  <p>
-  {% trans %}
-    Technology initiatives like Rust and Mozilla’s online game centre aim to spread new thinking about open technology across the whole of the internet industry.
-  {% endtrans %}
-  </p>
-
-  <h2>{{ _('Mozilla Community') }}</h2>
+  <h3>{{ _('Mozilla Community') }}</h3>
   <p>
   {% trans url_learning='https://learning.mozilla.org/', url_mdn = 'https://developer.mozilla.org/' %}
     The real power behind Mozilla is a global community of 10,000s of volunteers, allies and partners. Members of the Mozilla community participate by doing everything from contributing code to Firefox and <a href="{{ url_learning }}">teaching digital literacy</a> to translating our software, organizing advocacy campaigns and writing the world's most referenced <a href="{{ url_mdn }}">web developer site</a>.
   {% endtrans %}
   </p>
 
-  <h2>{{ _('Get Involved') }}</h2>
+  <h3>{{ _('Get Involved') }}</h3>
   <p>
   {% trans url_community='https://www.mozilla.org/contribute/', url_donation='https://donate.mozilla.org/en-US/?presets=100,50,25,15&amount=50&ref=EOYFR2015&utm_campaign=EOYFR2015&utm_source=mozilla.org&utm_medium=referral&utm_content=foundation&currency=usd' %}
     Join us and help protect the internet as a global public resource. To get started, <a href="{{ url_community }}">join our community</a> or <a href="{{ url_donation }}">make a donation</a>.
