--- a/bedrock/foundation/templates/foundation/base-resp.html
+++ b/bedrock/foundation/templates/foundation/base-resp.html
@@ -16,21 +16,31 @@
     (url('foundation.index'), 'index', 'The Mozilla Foundation'),
     (url('foundation.about'), 'about', 'About the Foundation'),
     ('https://mzl.la/foundation-strategy', 'strategy', '2016-2018 Strategy'),
-    (url('foundation.annualreport'), 'report', 'Annual Report'),
-    ('https://careers.mozilla.org/', 'careers', 'Careers'),
-    (donate_url('foundation_nav'), 'donate', 'Donate'),
     (url('foundation.licensing'), 'licensing', 'Licensing & Trademarks'),
     (url('foundation.documents.index'), 'documents', 'Public Documents'),
+    ('https://careers.mozilla.org/', 'careers', 'Careers'),
+] %}
+
+{% set programs = [
+  (url('foundation.issues'), 'issues', 'Key Internet Issues'),
+  (url('foundation.advocacy'), 'advocacy', 'Advocacy'),
+  (url('foundation.leadership-network'), 'leadership-network', 'Leadership Network')
 ] %}
 
 {% block content %}
-  <main id="main-content">
-    {% block article_title %}{% endblock %}
-
-    <div class="main-column">
-      {% block article %}{% endblock %}
-    </div>
-
+  <main>
+    <header class="page-header">
+      <h1><span class="content">{{ _('The Mozilla Foundation') }}</span></h1>
+    </header>
+    <section>
+      <div class="content content-main">
+      <div class="main-column">
+        <header class="section-header">
+        <h1>{% block article_title %}{% endblock %}</h1>
+        <p>{% block article_subtitle %}{% endblock%}</p>
+        </header>
+        {% block article %}{% endblock %}
+      </div>
     {% block sidebar %}
     <aside class="sidebar">
       <ul class="nav">
@@ -44,8 +54,32 @@
         </li>
       {% endfor %}
       </ul>
+      <ul class="nav">
+        <li><b>Foundation Programs</b></li>
+        {% for href, id, caption in programs %}
+        <li>
+          {% if id == body_id %}
+            <b>{{ caption|e }}</b>
+          {% else %}
+            <a href="{{ href|e }}">{{ caption|e }}</a>
+          {% endif %}
+        </li>
+        {% endfor %}
+      </ul>
     </aside>
     {% endblock %}
-
+  </section>
   </main>
+{% endblock %}
+
+{% block email_form %}
+  <aside id="newsletter-subscribe">
+    <div class="content container">
+    {% if LANG.startswith('en-') %}
+      {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Sign up. Read up.<br> Make a difference.'), subtitle=_('Get the Mozilla newsletter and help us keep the Web free and open.'), button_class='red') }}
+    {% else %}
+      {{ email_newsletter_form(button_class='red') }}
+    {% endif %}
+    </div>
+  </aside>
 {% endblock %}
