WIP [fix bug 1297399] Add preferences screen to email confirm page.

--- a/media/css/newsletter/newsletter.less
+++ b/media/css/newsletter/newsletter.less
@@ -137,6 +137,17 @@
     }
 }
 
+#newsletter-confirm #wrapper {
+    h1,
+    p {
+        padding: 0 (@baseLine * 1.5);
+
+        @media only screen and (max-width: @breakTablet) {
+            padding: 0 @baseLine;
+        }
+    }
+}
+
 #newsletter-updated {
     #content {
         h3,
