--- a/bedrock/newsletter/templates/newsletter/base.html
+++ b/bedrock/newsletter/templates/newsletter/base.html
@@ -7,8 +7,7 @@
 
 {% block body_class %}sand{% endblock %}
 
-{% block site_css %}
-  {{ super() }}
+{% block page_css %}
   {% stylesheet 'newsletter' %}
 {% endblock %}
 
