--- a/bedrock/newsletter/templates/newsletter/confirm.html
+++ b/bedrock/newsletter/templates/newsletter/confirm.html
@@ -13,8 +13,28 @@
 {% block content %}
   {% if success %}
     <h1>{{ _('Thanks for Subscribing!') }}</h1>
-    <p>{{ _('Your newsletter subscription has been confirmed.') }}</p>
-    <p>{{ _('Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.') }}</p>
+
+    {% if l10n_has_tag('newsletter_confirm_2016') %}
+      <p>
+        {{ _('You’re awesome!') }}
+        {{ _('And we’re not just saying that because you trusted us with your email address.') }}
+        {{ _('Please be sure to add mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.') }}
+      </p>
+    {% else %}
+      <p>{{ _('Your newsletter subscription has been confirmed.') }}</p>
+      <p>{{ _('Please be sure to add our sending address: mozilla@e.mozilla.org to your address book to ensure we always reach your inbox.') }}</p>
+    {% endif %}
+
+    {% if formset and not switch('newsletter-maintenance-mode') %}
+      {% if l10n_has_tag('newsletter_confirm_2016') %}
+        <p>
+          {{ _('Mozilla touches on a variety of important issues.') }}
+          {{ _('Open your inbox (and your heart) even more — take a look at other topics we cover.') }}
+        </p>
+      {% endif %}
+
+      {% include 'newsletter/includes/preferences-form.html' %}
+    {% endif %}
   {% elif token_error %}
     <p>{{ _('The supplied link has expired. You will receive a new one in the next newsletter.') }}</p>
   {% elif generic_error %}
