Adjust mobile padding and font size for foundation

--- a/media/css/foundation/foundation.less
+++ b/media/css/foundation/foundation.less
@@ -155,7 +155,7 @@
         font-size: 2.5rem;
     }
     p{
-        font-size: 1.75rem;
+        font-size: 1.6rem;
         line-height: 1.2;
     }
     h1:empty, p:empty {
@@ -346,7 +346,9 @@ html[dir="rtl"] {
     #masthead,
     .content,
     .billboard {
-        width: @widthMobile - (@gridGutterWidth * 2);
+        width: 96%;
+        padding-left: 2%;
+        padding-right: 2%;
     }
 
     .billboard {
