Foundation copy adjustments

--- a/bedrock/foundation/templates/foundation/advocacy.html
+++ b/bedrock/foundation/templates/foundation/advocacy.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block article_subtitle %}
-  {{ _('Our Vision: Rallying citizens to protect the open Internet') }}
+  {{ _('Rallying citizens to protect the open Internet') }}
 {% endblock %}
 
 {% block article %}
