--- a/bedrock/foundation/templates/foundation/index.html
+++ b/bedrock/foundation/templates/foundation/index.html
@@ -17,7 +17,7 @@
 {% block article %}
   <p>
   {% trans %}
-    The direct work of the Mozilla Foundation focuses on making the health of the Internet a mainstream issue. We do this by connecting open Internet leaders with each other and by mobilizing grassroots activities around the world.
+    The direct work of the Mozilla Foundation focuses on fueling the movement for an open Internet. We do this by connecting open Internet leaders with each other and by mobilizing grassroots activists around the world.
   {% endtrans %}
   </p>
 
@@ -44,7 +44,7 @@
 
     <p>
     {% trans %}
-      Mozilla has identified five key issues that are critical at this moment in time to build the open Internet we want:
+      Mozilla has identified five key issues that are critical to build the open Internet we want:
     {% endtrans %}
     </p>
 
@@ -61,7 +61,7 @@
       <h3><a href={{url('foundation.leadership-network')}}>{{ _('Connect leaders') }}</a></h3>
       <p>
       {% trans %}
-        Our nascent Mozilla Leadership Network finds, connects and provides learning opportunities for a new generation of leaders. It includes a diverse collection of leaders in fields like science, public policy, education and technology.
+        Our nascent Mozilla Leadership Network finds, connects and provides learning opportunities for a new generation of leaders who will ensure the next wave of access, inclusion and opportunity online.
       {% endtrans %}
       </p>
     </div>
@@ -70,7 +70,7 @@
       <h3><a href={{url('foundation.advocacy')}}>{{ _('Rally citizens') }}</a></h3>
       <p>
       {% trans %}
-        Mozilla works with allies to cultivate a global force of tens of millions of people prepared to support the rights of citizens of the web. From advocacy campaigns to grassroots mobilizing, we’re raising awareness and building a community of activists around the world.
+        Mozilla works with allies to cultivate a global force of tens of millions of people prepared to support the rights of citizens of the web.
       {% endtrans %}
       </p>
     </div>
