--- a/bedrock/foundation/templates/foundation/issues.html
+++ b/bedrock/foundation/templates/foundation/issues.html
@@ -9,7 +9,7 @@
 {% set body_id = "issues" %}
 
 {% block article_title %}
-  {{ _('Mozilla\'s Issues Platform') }}
+  {{ _('Mozilla\'s Key Internet Issues') }}
 {% endblock %}
 
 {% block article_subtitle %}
