--- a/bedrock/foundation/templates/foundation/leadership-network.html
+++ b/bedrock/foundation/templates/foundation/leadership-network.html
@@ -13,7 +13,7 @@
 {% endblock %}
 
 {% block article_subtitle %}
-  {{ _('Our Vision: Connecting Leaders') }}
+  {{ _('Connecting Leaders') }}
 {% endblock %}
 
 {% block article %}
