[fix bug 1305799] Update Mitchell's bio.

--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -90,20 +90,34 @@
         <div class="person-bio">
           <p>
           {% trans %}
-            As the leader of the Mozilla Project, Mitchell Baker is responsible for organizing and motivating a massive, worldwide, collective of employees and volunteers who are breathing new life into the Internet with the Firefox Web browser, Firefox OS and other Mozilla products. Mitchell was born and raised in Berkeley, California, receiving her BA in Asian Studies from UC Berkeley and her JD from the Boalt Hall School of Law. Mitchell has been the general manager of the Mozilla project since 1999. She served as CEO of Mozilla until January 2008, when the organization’s rapid growth encouraged her to split her responsibilities and add a CEO. Mitchell remains deeply engaged in developing product offerings that promote the mission of empowering individuals. She also guides the overall scope and direction of Mozilla’s mission.
+            Mitchell Baker co-founded the Mozilla Project to support the open, innovative web and ensure it continues offering opportunities for everyone. As Executive Chairwoman of Mozilla, Mitchell Baker is responsible for organizing and motivating a massive, worldwide, collective of employees and volunteers around the world who are building the Internet as a global public resource, open and accessible to all. Mitchell is deeply engaged in developing product offerings that promote the mission of empowering individuals. She also guides the overall scope and direction of Mozilla’s mission.
           {% endtrans %}
           </p>
 
           <p>
           {% trans %}
-            As Executive Chairwoman of Mozilla, Mitchell continues her commitment to an open, innovative Web and the infinite possibilities it presents. TIME Magazine profiled Mitchell under “Scientists and Thinkers” in its TIME 100 and she has appeared on NBC’s “Meet the Press”, BBC’s “HardTalk”, “The Charlie Rose Show” and “CNN Global Office”. Bloomberg listed her as one of the ’25 Most Influential People on the Web’. Mitchell was honored as winner of the Anita Borg Institute’s 2009 Women of Vision Award and in 2010 she was the recipient of the Aenne Burda Award for Creative Leadership. In 2012, Mitchell was inducted into the founding group of the Internet Society’s Hall of Fame.
+            Mitchell is a strong advocate for the open web and open source, and is highly regarded as one of the pioneers who have built the web as it is today. She was instrumental in Netscape’s decision in 1998 to release its source code to the public. This later led to the release of the Firefox browser and the creation of the Mozilla Project as one of the most influential technology organizations in the world, spanning software product development, educational initiatives, and participatory movements. After co-founding the Mozilla Project, Mitchell served as its general manager and CEO from 1999 until January 2008, when the organization’s rapid growth encouraged her to split her responsibilities and add a CEO.
           {% endtrans %}
           </p>
 
           <p>
           {% trans %}
-            Mitchell serves as a Board Member for the OpenMRS, which builds the world’s leading open source enterprise electronic medical record system platform. She is an MIT Media Lab Research Affiliate, Open Agriculture Initiative, co-chairs the Department of Commerce Digital Economy Advisory Board and serves on the United Nations High Level Panel on Women’s Economic Empowerment. Mitchell was co-Chair of the World Economic Forum Annual Meeting of the New Champions in 2015.
+            Mitchell is a Board Member for the OpenMRS, the world’s leading open source enterprise electronic medical record system platform, and is an MIT Media Lab Research Affiliate, Open Agriculture Initiative. She co-chairs the U.S. Department of Commerce Digital Economy Advisory Board and serves on the United Nations High Level Panel on Women’s Economic Empowerment. Mitchell was co-Chair of the World Economic Forum Annual Meeting of the New Champions in 2015 and a member of the ICANN High Level Panel on Global Internet Cooperation and Governance Mechanisms.
           {% endtrans %}
+          </p>
+
+          <p>
+          {% trans %}
+            A native of the San Francisco Bay Area, Mitchell received her B.A. in Asian Studies from UC Berkeley and her J.D. from Berkeley Law. In her early career, she worked as a Corporate and Intellectual Property Lawyer at Fenwick West LLP and as Associate General Counsel for Sun Microsystems.
+          {% endtrans %}
+          </p>
+
+          <p>
+            <em>
+            {% trans %}
+              TIME Magazine profiled Mitchell in its global list of “100 Most Influential People” under “Scientists and Thinkers”. Bloomberg listed her as one of the “25 Most Influential People on the Web”. She was honored as winner of the Anita Borg Institute’s 2009 Women of Vision Award and received the Aenne Burda Award for Creative Leadership in 2010. In 2012, Mitchell was inducted into the founding group of the <a rel="external" href="http://www.internethalloffame.org/inductees/mitchell-baker">Internet Society’s Hall of Fame</a>. She has appeared on NBC “Meet the Press”, BBC “HardTalk”, “The Charlie Rose Show” and “CNN Global Office”. She has spoken at high-level events like the World Economic Forum, Mobile World Congress, The Web Summit, Collision, Singularity University and Bits&Pretzels.
+            {% endtrans %}
+            </em>
           </p>
         </div>
       </article>
