Foundation bug/link fixes

--- a/bedrock/foundation/templates/foundation/leadership-network.html
+++ b/bedrock/foundation/templates/foundation/leadership-network.html
@@ -6,7 +6,7 @@
 
 {% block page_title %}{{ _('The Mozilla Leadership Network') }}{% endblock %}
 
-{% set body_id = "leadership" %}
+{% set body_id = "leadership-network" %}
 
 {% block article_title %}
   {{ _('The Mozilla Leadership Network') }}
@@ -42,8 +42,8 @@
   <ul>
     <li>{% trans url_learning="https://learning.mozilla.org" %}<a href="{{ url_learning }}">Learning.</a> Educators and librarians committed to transforming learning in our digital age.{% endtrans %}</li>
     <li>{% trans url_science="https://science.mozilla.org" %}<a href="{{ url_science }}">Science.</a> Researchers and data scientists committed to making research and practice more open.{% endtrans %}</li>
-    <li>{% trans url_advocacy="htts://advocacy.mozilla.org" %}<a href="{{ url_advocacy }}">Internet Policy & Advocacy.</a> Individuals and organizations focused on advancing open Internet issues.{% endtrans %}</li>
-    <li>{% trans url_women="https://blog.webmaker.org/new-partnership-with-un-women-to-teach-key-digital-skills-to-women" %}<a href="{{ url_women }}">Women & Web Literacy.</a> Community organizers and senior leaders creating opportunities for women and girls to develop web literacy skills.{% endtrans %}</li>
+    <li>{% trans url_advocacy="https://advocacy.mozilla.org" %}<a href="{{ url_advocacy }}">Internet Policy & Advocacy.</a> Individuals and organizations focused on advancing open Internet issues.{% endtrans %}</li>
+    <li>{% trans url_women="https://mozilla.github.io/womenandweb/" %}<a href="{{ url_women }}">Women & Web Literacy.</a> Community organizers and senior leaders creating opportunities for women and girls to develop web literacy skills.{% endtrans %}</li>
     <li>{% trans url_iot="https://github.com/openiotstudio" %}<a href="{{ url_iot }}">Internet of Things.</a> Hackers and designers creating provocative prototypes for what an open Internet of Things could and should be.{% endtrans %}</li>
   </ul>
 
@@ -52,7 +52,7 @@
     {{ _('The Mozilla Leadership Network pursues our goals through five key initiatives, which are reflected in each hub:')}}
     <ul>
       <li>{% trans url_weblit_module="https://thimbleprojects.org/chadsansing/75057/#overview" %}<em>Curricula &</em> Training. We provide free and open curricula and training programs to help leaders develop the skills they need to ensure the next wave of access, inclusion and opportunity online. Example: <a href="{{ url_weblit_module }}">Web Literacy Training Module</a>{% endtrans %}</li>
-      <li>{% trans url_gigabit="https://blog.webmaker.org/mozilla-announces-expansion-of-gigabit-innovation-program-at-us-ignite-event-in-washington-dc" %}<em>Partnerships.</em> We initiate and grow partnerships that enable Mozilla, our community and our allies to maximize their impact. Example: <a href="{{ url_gigabit }}">Gigabit Community Fund</a>{% endtrans %}</li>
+      <li>{% trans url_gigabit="https://www.mozilla.org/en-US/gigabit/" %}<em>Partnerships.</em> We initiate and grow partnerships that enable Mozilla, our community and our allies to maximize their impact. Example: <a href="{{ url_gigabit }}">Gigabit Community Fund</a>{% endtrans %}</li>
       <li>{% trans url_mozFest="https://mozillafestival.org" %}<em>Convening.</em> We bring members of the Mozilla Leadership Network together, to learn from one another, exchange ideas and join forces. Example: <a href="{{ url_mozFest }}">MozFest</a>{% endtrans %}</li>
       <li>{% trans url_fellowships="https://science.mozilla.org/programs/fellowships" %}<em>Membership.</em> Members join because they share Mozilla’s vision, and stay because of the strong, diverse community and unique professional development opportunities the network provides. Example: <a href="{{ url_fellowships }}">Fellowships</a>{% endtrans %}</li>
     </ul>
