--- a/media/css/foundation/foundation.less
+++ b/media/css/foundation/foundation.less
@@ -19,9 +19,10 @@
     background: #f5f5f5;
     text-align: center;
     font-weight: bold;
-    padding: 0.25em 0;
+    padding: 0.25em 0.5em;
     &:after {
         content: " \00BB";
+        white-space: nowrap;
     }
 }
 
