[fix bug 1306102] Update Mozilla Reps Council on leadership page

--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -1022,12 +1022,12 @@
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <figure class="headshot">
-          <a class="url" itemprop="url" rel="external" href="https://reps.mozilla.org/u/rardila/">
-            {{ high_res_img('mozorg/about/leadership/rosana-ardila.jpg', {'alt': '', 'width': '160', 'height': '160', 'class': 'photo', 'itemprop': 'image'}) }}
-            <figcaption><h4 class="fn" itemprop="name">Rosana Ardila</h4></figcaption>
+          <a class="url" itemprop="url" rel="external" href="https://reps.mozilla.org/u/Flore/">
+            {{ high_res_img('mozorg/about/leadership/flore-allemandou.jpg', {'alt': '', 'width': '160', 'height': '160', 'class': 'photo', 'itemprop': 'image'}) }}
+            <figcaption><h4 class="fn" itemprop="name">Flore Allemandou</h4></figcaption>
           </a>
         </figure>
-        <p class="since">{{ _('With Mozilla since:') }} 2011</p>
+        <p class="since">{{ _('With Mozilla since:') }} 2004</p>
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
@@ -1042,22 +1042,22 @@
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <figure class="headshot">
-          <a class="url" itemprop="url" rel="external" href="https://reps.mozilla.org/u/bacharakis/">
-            {{ high_res_img('mozorg/about/leadership/christos-bacharakis.jpg', {'alt': '', 'width': '160', 'height': '160', 'class': 'photo', 'itemprop': 'image'}) }}
-            <figcaption><h4 class="fn" itemprop="name">Christos Bacharakis</h4></figcaption>
+          <a class="url" itemprop="url" rel="external" href="https://reps.mozilla.org/u/dricupello/">
+            {{ high_res_img('mozorg/about/leadership/adriano-cupello.jpg', {'alt': '', 'width': '160', 'height': '160', 'class': 'photo', 'itemprop': 'image'}) }}
+            <figcaption><h4 class="fn" itemprop="name">Adriano Cupello</h4></figcaption>
           </a>
         </figure>
-        <p class="since">{{ _('With Mozilla since:') }} 2012</p>
+        <p class="since">{{ _('With Mozilla since:') }} 2013</p>
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <figure class="headshot">
-          <a class="url" itemprop="url" rel="external" href="https://reps.mozilla.org/u/shahidfarooqui/">
-            {{ high_res_img('mozorg/about/leadership/shahid-ali-farooqui.jpg', {'alt': '', 'width': '160', 'height': '160', 'class': 'photo', 'itemprop': 'image'}) }}
-            <figcaption><h4 class="fn" itemprop="name">Shahid Ali Farooqui</h4></figcaption>
+          <a class="url" itemprop="url" rel="external" href="https://reps.mozilla.org/u/brianking/">
+            {{ high_res_img('mozorg/about/leadership/brian-king.jpg', {'alt': '', 'width': '160', 'height': '160', 'class': 'photo', 'itemprop': 'image'}) }}
+            <figcaption><h4 class="fn" itemprop="name">Brian King</h4></figcaption>
           </a>
         </figure>
-        <p class="since">{{ _('With Mozilla since:') }} 2011</p>
+        <p class="since">{{ _('With Mozilla since:') }} 1999</p>
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
@@ -1072,22 +1072,22 @@
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
         <figure class="headshot">
+          <a class="url" itemprop="url" rel="external" href="https://reps.mozilla.org/u/alex_lakatos/">
+            {{ high_res_img('mozorg/about/leadership/alex-lakatos.jpg', {'alt': '', 'width': '160', 'height': '160', 'class': 'photo', 'itemprop': 'image'}) }}
+            <figcaption><h4 class="fn" itemprop="name">Alex Lakatos</h4></figcaption>
+          </a>
+        </figure>
+        <p class="since">{{ _('With Mozilla since:') }} 2011</p>
+      </li>
+
+      <li class="vcard" itemscope itemtype="http://schema.org/Person">
+        <figure class="headshot">
           <a class="url" itemprop="url" rel="external" href="https://reps.mozilla.org/u/nukeador/">
             {{ high_res_img('mozorg/about/leadership/ruben-martin.jpg', {'alt': '', 'width': '160', 'height': '160', 'class': 'photo', 'itemprop': 'image'}) }}
             <figcaption><h4 class="fn" itemprop="name">Rubén Martin</h4></figcaption>
           </a>
         </figure>
         <p class="since">{{ _('With Mozilla since:') }} 2004</p>
-      </li>
-
-      <li class="vcard" itemscope itemtype="http://schema.org/Person">
-        <figure class="headshot">
-          <a class="url" itemprop="url" rel="external" href="https://reps.mozilla.org/u/thephoenixbird/">
-            {{ high_res_img('mozorg/about/leadership/arturo-martinez.jpg', {'alt': '', 'width': '160', 'height': '160', 'class': 'photo', 'itemprop': 'image'}) }}
-            <figcaption><h4 class="fn" itemprop="name">Arturo Martinez</h4></figcaption>
-          </a>
-        </figure>
-        <p class="since">{{ _('With Mozilla since:') }} 2009</p>
       </li>
 
       <li class="vcard" itemscope itemtype="http://schema.org/Person">
